<resources>
    <string name="app_name">Polls Community</string>
    <string name="Login_button_text">Login</string>
    <string name="Register_button_text">Register</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="view_poll">View Poll</string>
    <string name="delete_button_text">Delete</string>
    <string name="firstname_button_text">First Name</string>
    <string name="lastname_button_text">Last Name</string>
    <string name="newuser_button_text">New user? click here to register!</string>
    <string name="register_button_text">Register</string>
    <string name="existinguser_button_text">Already a user? Login!</string>
    <string name="admin_code_text">Enter admin code</string>
    <string name="vote_button_text">Vote</string>
    <string name="create_poll">Create Poll</string>
    <string name="add_button_text">Add</string>
    <string name="add_option_placeholder">Add new option...</string>
    <string name="add_poll_name_placeholder">Write your poll name</string>
    <string name="add_poll_button_text">Add poll</string>
    <string name="add_poll_title">Add New Poll</string>
    <string name="navigate_polls_button">Go to polls</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="delete_poll">Delete poll</string>
    <string name="view_button_text">View</string>
    <string name="welcome_title">Welcome To Polls App!</string>
    <string name="logout_button_text">Logout</string>
    <string name="admin_checkbox_text">Admin</string>
    <string name="already_voted_text">You voted for this option.</string>
    <string name="votes_button_text">Votes</string>
    <string name="general_error_text">something went wrong...</string>
    <string name="add_poll_text_toast">add poll name!</string>
    <string name="login_missing_username_or_password_toast">enter username and password</string>
    <string name="login_successfully_toast">signed in successfully</string>
    <string name="vote_added_toast">vote added successfully</string>
    <string name="no_internet_connection">there is no internet connection..</string>
    <string name="general_error_text_try_again">something went wrong.. try again</string>
    <string name="wrong_username_or_password">wrong username or password</string>
    <string name="add_options_request">please add options</string>
    <string name="password_not_long_enough_toast">password must be at least 8 characters</string>
    <string name="add_option_name_toast">add option name</string>
    <string name="user_already_exists_toast">a user with the same username already exists</string>
    <string name="weak_password_toast">you\'ve entered weak password</string>
    <string name="invalid_email_toast">you\'ve entered invalid email</string>
    <string name="selected_option_text">Selected Option:</string>
    <string name="details_button_text">Poll Details</string>
    <string name="select_option_text">Select Option</string>
    <string name="you_choose_text">You choose:</string>
    <string name="poll_details_title">Poll Details</string>
    <string name="creator_text">Creator:</string>
    <string name="created_at_text">Created at:</string>
    <string name="choose_option_toast">Please choose option</string>
    <string name="please_enter_firstname">Please Enter Firstname</string>
    <string name="please_enter_lastname">Please Enter Lastname</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="please_enter_email">Please Enter Email</string>
    <string name="my_polls_button_text">My Polls</string>
    <string name="global_polls_button_text">Global Polls</string>
</resources>
