<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_chart">

    <Button
        android:id="@+id/register_button"
        android:layout_width="248dp"
        android:layout_height="47dp"
        android:layout_marginBottom="112dp"
        android:background="@drawable/button_shape_view"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/register_button_text"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="@string/email_placeholder"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/email_placeholder"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password_input"
        app:layout_constraintEnd_toEndOf="@+id/password_input"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_input"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="@string/password_placeholder"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/firstname_input"
        app:layout_constraintEnd_toEndOf="@+id/firstname_input"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/firstname_input" />

    <EditText
        android:id="@+id/firstname_input"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="@string/firstname_button_text"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/firstname_button_text"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/lastname_input"
        app:layout_constraintEnd_toEndOf="@+id/lastname_input"
        app:layout_constraintStart_toStartOf="@+id/lastname_input" />

    <EditText
        android:id="@+id/lastname_input"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:autofillHints="@string/lastname_button_text"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:hint="@string/lastname_button_text"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="189dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button_shape_view"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/existinguser_button_text"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="44dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/admin_checkbox"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/admin_checkbox_text" />

        <EditText
            android:id="@+id/admin_code_input"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/admin_code_text"
            android:inputType="textPersonName"
            android:visibility="invisible" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

