<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_chart"
    android:id="@+id/layout"
    >

    <TextView
        android:id="@+id/poll_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/add_poll_name_placeholder"
        android:textColor="@color/blue"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poll_details_button" />

    <Button
        android:id="@+id/poll_details_button"
        android:layout_width="116dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_shape_option"
        android:text="@string/details_button_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="match_parent"
        android:layout_height="345dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poll_name"
        app:layout_constraintVertical_bias="0.74" />

    <LinearLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/pieChart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poll_name"
        app:layout_constraintVertical_bias="0.481">


        <Button
            android:id="@+id/vote_button"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/button_shape_view"
            android:text="@string/vote_button_text" />

        <Spinner
            android:id="@+id/options_dropdown"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>