<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_chart">


    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="248dp"
        android:layout_height="215dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:indeterminateDrawable="@drawable/loader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="50"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/welcome_title"
            android:textColor="@color/blue"
            android:textSize="50sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/add_poll_button"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="7"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_shape_view"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/add_poll_button_text"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/view_polls_button"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="7"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/button_shape_view"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/navigate_polls_button"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
       />







    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>